Bug 614293 - Regression: Typing in urlbar does not replace selection. r=blassey a=blocking-fennec